Move innerHTML into index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Vite App</title>
+    </head>
+    <body class="scroll">
+        <div id="container">
+            <div id="header">
+                <h1 class="title">⋆⭒˚.⋆୨୧ Meow Jam ୨୧⋆.˚⭒⋆</h1>
+            </div>
+            <div id="wrapper">
+                <div id="two-boxes">
+                    <div class="box-one scroll">
+                       <div class="section-title"> MEOW!!!!</div>
+
+                       <div class="content">
+                          <p>this is the sidebar!!1!</p>
+                       </div>
+                    </div>
+
+                    <div class="box-two scroll">
+                        <div class="section-title"> MEOW!!!!</div>
+                            <div class="content">
+                                <p>this is the other stuff!!1!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="footer">
+                    <p>❤ Made with love by Lana, Alice, Mark, and Peter ❤</p>
+                </div>
+            </div>
+        </div>
+        <script type="module" src="/src/main.js"></script>
+    </body>
 </html>
