--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
             <div id="wrapper">
                 <div id="two-boxes">
                     <div class="box-one scroll">
-                       <div class="section-title"> MEOW!!!!</div>
-
-                       <div class="content">
-                          <p>this is the sidebar!!1!</p>
-                       </div>
+                       <div class="section-title"> The Queue :3</div>
+                       
+                       <div class="content" id="queue"></div>
                     </div>
 
                     <div class="box-two scroll">
