--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                        <div class="section-title"> The Queue :3</div>
                        
                        <div class="content" id="queue"></div>
+                       <div class="content">
+                        <div style="text-align:center;"><button>click!!</button></div>
+                       </div>
                     </div>
 
                     <div class="box-two scroll">
