Basic mic visualisation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite App</title>
+        <script src="./src/analyser.js"></script>
     </head>
     <body class="scroll">
         <div id="container">
@@ -21,11 +22,15 @@
                        </div>
                     </div>
 
-                    <div class="box-two scroll">
+                    <div class="box-two scroll" id="box-two">
                         <div class="section-title"> MEOW!!!!</div>
                             <div class="content">
                                 <p>this is the other stuff!!1!</p>
+                                
                             </div>
+                            <canvas id="visualizer">
+
+                            </canvas>
                         </div>
                     </div>
                 </div>
