Integrate with button git pullgit pullgit pull

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                        
                        <div class="content" id="queue"></div>
                        <div class="content">
-                        <div style="text-align:center;"><button>click!!</button></div>
+                        <div style="text-align:center;"><button onclick="init()">click!!</button></div>
                        </div>
                     </div>
 
