Add file paths from file picker to queue

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                        <div class="content" id="queue"></div>
 
                        <div style="text-align:center;"><button>play!!!</button></div>
-                       <div style="text-align:center;"><button>load file!!!</button></div>
+                       <div style="text-align:center;" id="load-file-button"><button>load file!!!</button></div>
 
             
                     </div>
