--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 </div>
                 <div id="footer">
                     <p>❤ Made with love by Lana, Alice, Mark, and Peter ❤</p>
+                    <img src="./src/assets/gatto.gif">
                 </div>
             </div>
         </div>
