--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
                             <div class="section-title"> MEOW!!!!</div>
                                 <div class="content">
                                     <p>this is the other stuff!!1!</p>
-
+                                    <audio controls>
+                                        <source src="cat.mp3" type="audio/mpeg">
+                                      Your browser does not support the audio element.
+                                      </audio> 
                                 </div>
                                 <canvas id="visualizer"></canvas>
                                 <div class="content">
