--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
                             <div class="section-title"> MEOW!!!!</div>
                                 <div class="content">
                                     <p>this is the other stuff!!1!</p>
-                                    <audio controls>
-                                        <source src="cat.mp3" type="audio/mpeg">
-                                      Your browser does not support the audio element.
-                                      </audio> 
                                 </div>
-                                <canvas id="visualizer"></canvas>
+                                <div id="vis-div" style="height: 60%;">
+                                    <canvas id="visualizer"></canvas>
+                                </div>
+                                
                                 <div class="content">
                                     <div style="text-align:center;"><button id="play-button">play!!</button></div>
                                 </div>
