Update the cats

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <div class="cat-background">
             <div id="container">
                 <div id="header">
+                    <img src="gatto.gif" class="gatto left">
                     <h1 class="title">⋆⭒˚.⋆୨୧ Meow Jam ୨୧⋆.˚⭒⋆</h1>
+                    <img src="gatto.gif" class="gatto right">
                 </div>
+                
                 <div id="wrapper">
                     <div id="two-boxes">
                         <div class="box-one scroll">
