--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/png" href="https://neothemes.neocities.org/images/favicon.gif" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>Meow Jam</title>
     </head>
     <body class="scroll">
         <div class="cat-background">
@@ -41,10 +41,19 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="footer">
+                            <p>❤ Made with love by Lana, Alice, Mark, and Peter ❤</p>
+                            <img src="/src/assets/vscbutton.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/bobbutton.gif" alt="bob" height="31" width="88">
+                            <img src="/src/assets/gnu-linux.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/hello_kitty.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/frog!!.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/transrights.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/wii.gif" alt="3ds!!" height="31" width="88">
+                            <img src="/src/assets/neovim.gif" alt="3ds!!" height="31" width="88">
+                        </div>
                     </div>
-                    <div id="footer">
-                        <p>❤ Made with love by Lana, Alice, Mark, and Peter ❤</p>
-                    </div>
+                    
                 </div>
             </div>
         </div>
